[tool.poetry]
name = "mock-aiohttp"
version = "0.1.3"
description = "Create a mock for aiohttp.ClientSession"
authors = ["fitzypop <32967490+fitzypop@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "mock-aiohttp" }]
repository = "https://github.com/fitzypop/mock-aiohttp"

[tool.poetry.dependencies]
python = "^3.8.1"
aiohttp = "^3.8.3"
pytest = "^7.2.0"
pytest-asyncio = "^0.20.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.237"
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
